[docs]: Fix code block dark mode (#60)

--- a/docs/static/one-light.prism.css
+++ b/docs/static/one-light.prism.css
@@ -28,6 +28,26 @@
  * --syntax-cursor-line: hsla(230, 8%, 24%, 0.05);
  */
 
+/* Prefer color scheme: dark */
+@media (prefers-color-scheme: dark) {
+	pre[class*="language-"],
+	code[class*="language-"] {
+		color: hsl(219, 13.5%, 71%);
+		background: hsl(204.1 38.4% 10.6%);
+	}
+
+	code[class*="language-"]::selection,
+	code[class*="language-"] *::selection,
+	pre[class*="language-"] *::selection {
+		background: hsl(230 6% 32%);
+		color: inherit;
+	}
+
+	.token.punctuation {
+		color: hsl(219, 13.5%, 71%);
+	}
+}
+
 code[class*="language-"],
 pre[class*="language-"] {
 	background: hsl(230, 1%, 98%);
@@ -425,4 +445,24 @@ pre > code.diff-highlight .token.token.inserted:not(.prefix) *::selection {
 /* Fill colour of the handle */
 .prism-previewer-easing.prism-previewer-easing circle {
 	fill: transparent;
+}
+
+/* Manual toggle Dark mode */
+html[data-theme="black"] pre[class*="language-"],
+html[data-theme="black"] code[class*="language-"] {
+	color: hsl(219, 13.5%, 71%);
+	background: hsl(204.1 38.4% 10.6%);
+}
+
+/* Dark mode Selection */
+html[data-theme="black"] code[class*="language-"]::selection,
+html[data-theme="black"] code[class*="language-"] *::selection,
+html[data-theme="black"] pre[class*="language-"] *::selection {
+	background: hsl(230 6% 32%);
+	color: inherit;
+}
+
+/* Dark mode Code blocks */
+html[data-theme="black"] .token.punctuation {
+	color: hsl(219, 13.5%, 71%);
 }
